# The-Architect

./: .gitignore  CMakeLists.txt  PROJECT_REVIEW_AND_ANALYSIS.md  Pi.md  Plants.md  README.md  README_CPP.md  REVIEW_SUMMARY.md  Synchronicity.md  finding your purpose.md
00_The_Kernel/: Axioms.md  Kernel_01_Project_Scope.md  Lexicon.md  Ontology_Map.md
01_The_Ontology/: Concept_01_Shadow_Vs_Light.md  Concept_02_Static_Time.md  Concept_03_The_E8_Crystal.md  Concept_04_Projection_and_Visibility.md  Concept_05_Operator_and_State.md  Ontology_Overview.md
02_The_Physics_Engine/: Mech_01_Entropic_Gravity.md  Mech_02_The_Spectral_Action.md  Mech_03_Mass_And_Spin.md  Mech_04_Relativity_Update.md  Mech_05_Horizon_Hydrodynamics.md  Proof_01_Koide_Derivation.md  Proof_02_E8_H4_Projection.md
03_The_Cosmology/: Cosmo_01_Black_Holes.md  Cosmo_02_Dark_Sector.md  Cosmo_03_The_Golden_Echo.md
04_Consciousness_and_Biology/: Bio_01_Microtubules.md  Bio_02_Orch_Or.md  Bio_03_Plants_And_Entanglement.md
05_The_Operator_Manual/: 00_Introduction.md  00_The_Adjustment_Protocol.md  Guide_01_Finding_Purpose.md  Guide_02_Healing_And_Health.md  Guide_03_Synchronicity.md  Guide_04_Social_Algorithm.md  Guide_05_Breathing_Protocol.md
06_Falsifiability/: Test_01_Gamma_Ray_Dispersion.md  Test_02_Neutrinoless_Decay.md  Test_03_The_Golden_Ratio.md
07_Open_Questions/: Biological_Interfaces.md  Cosmic_Boundary_Conditions.md  Operator_Limits.md  Question_01_Fine_Tuning.md  Unknown_Parameters.md
08_References/: Historical_Notes.md  Ref_01_Bibliography.md  The_Glimpse.md  The_Shadow.md
09_Applications/: App_01_GQE_Compression.md
Examples/: CMakeLists.txt  GQEKerneConfig.cmake.in  README_CPP.md  benchmark.cpp  build.sh  gqe_kernel.hpp  gqe_kernel_minimal.hpp  performance_curve.csv  requirements.txt  requirements_gqe.txt  test.cpp  test_minimal.cpp  verify_e8_koide.py
Examples/gqe_compression/: ANALYSIS_REPORT.md  LIGHT_TRIANGLE_ALIGNMENT.md  README.md  __init__.py  compressor.py  decompressor.py  demo_radial_coding.py  run_enwik8_python.py  run_power_suite.py  verify_gqe.py
Examples/gqe_compression/core/: __init__.py  adaptive_horizon.py  bekenstein_bound.py  bit_packer.py  byte_lattice.py  context_mixer.py  delta_phi_packer.py  e8_lattice.py  fibonacci_hash.py  geometric_evolver.py  geometric_inheritance.py  geometric_reed_solomon.py  global_atlas.py  harmonic_signature.py  holographic_encoding.py  horizon_batcher.py  inertia_predictor.py  lattice_index.py  phi_adic.py  projection.py  quasicrystal.py  radial_arithmetic.py  sleep_cycle.py  spectral_action.py  tda.py  toric_error_correction.py  vectorized_rac.py
Examples/gqe_compression/tests/: __init__.py  run_power_suite.py  test_01_quasicrystal.py  test_02_compression.py  test_03_phi_adic.py  test_04_semantic_robust.py  test_05_phason_echo.py  test_06_fibonacci_word.py  test_07_scaling_horizon.py  test_08_semantic_geometry.py  test_09_horizon_batching.py  test_100mb_stress.py  test_11_hutter_benchmark.py  test_bekenstein_bound.py  test_golden_search.py  test_lossless_sleep.py  test_phason_zip.py  test_rss_measurement.py  test_self_learning.py  test_sleep_cycle.py  test_topological_index.py
Examples/intro/: gqe_kernel_minimal.hpp  test_minimal.cpp
docs/: CPP_KERNEL.md  (+2 more)
(+453 files in other folders)
